[workspace]
members = [
    "ratatui-ext",
    "rust-decimal-ext",
    "serde-ext",
    "std-ext",
    "tokio-ext",
    "tokio-tungstenite-ext",
    "tracing-subscriber-ext",
]
resolver = "3"

[workspace.package]
authors = ["discosultan"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/discosultan/rust-ext"
